--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,12 @@
 <resources>
     <string name="app_name">Do you know?</string>
-    <string name="question_1">1. Which one of these logos falls under the Automotive sector?</string>
-    <string name="question_2">2. Which one of these logos is the original Starbucks logo?</string>
-    <string name="question_3">3. Check all the companies that offer a movie streaming service.</string>
+    <string name="question_1">1. Which one of these is logo of android?</string>
+    <string name="question_2">2. Which famous Indian e-commerce company recently sold to Walmart ?</string>
+    <string name="question_3">3. Which one of them are not search engines</string>
     <string name="question_4">4. What is the name of this company?</string>
-    <string name="question_5">5. Which one of these logos is no longer current?</string>
+    <string name="question_5">5. Which one of these companies has cab service? </string>
     <string name="question_6">6. What color is this logo supposed to be?</string>
     <string name="question_7">7. Name this company:</string>
-    <string name="enter_your_response_here">Enter your response here...</string>
+    <string name="enter_your_response_here">Enter your response here…</string>
     <string name="submit">Submit</string>
 </resources>
